--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,12 +82,9 @@
 
                 <Button
                     android:id="@+id/btLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/MiBoton"
                     android:layout_marginTop="24dp"
-                    android:background="@drawable/gradient_bt"
-                    android:text="@string/sign_in"
-                    android:textColor="@color/colorWhite" />
+                    android:text="@string/sign_in" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
