--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -91,12 +91,9 @@
 
                 <Button
                     android:id="@+id/btSignUp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/MiBoton"
                     android:layout_marginTop="24dp"
-                    android:background="@drawable/gradient_bt"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/colorWhite" />
+                    android:text="@string/sign_up"/>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
