--- a/app/src/main/res/layout/fragment_home_admin.xml
+++ b/app/src/main/res/layout/fragment_home_admin.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
 
         android:layout_height="match_parent"
-        android:background="@color/colorPrimarytn"
+        android:background="@color/backgroundcolor"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2">
 
