--- a/app/src/main/res/drawable/gradient_bt.xml
+++ b/app/src/main/res/drawable/gradient_bt.xml
@@ -3,10 +3,9 @@
 
     <gradient
         android:angle="90"
-        android:endColor="@color/colorPrimarytn"
+        android:endColor="@color/backgroundcolor"
         android:startColor="@color/colorPrimaryDark"
         android:type="linear">
-
     </gradient>
 
     <corners
