--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,8 +3,8 @@
 
     <gradient
         android:angle="90"
-        android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimary"
+        android:endColor="?attr/endcolor"
+        android:startColor="?attr/startcolor"
         android:type="linear">
 
     </gradient>
