--- a/app/src/main/res/drawable/gradient_bt.xml
+++ b/app/src/main/res/drawable/gradient_bt.xml
@@ -3,8 +3,8 @@
 
     <gradient
         android:angle="90"
-        android:endColor="@color/backgroundcolor"
-        android:startColor="@color/colorPrimaryDark"
+        android:endColor="?attr/endcolor"
+        android:startColor="?attr/startcolor"
         android:type="linear">
     </gradient>
 
