--- a/app/src/main/res/layout/activity_spash.xml
+++ b/app/src/main/res/layout/activity_spash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="?attr/colorPrimary"
     tools:context=".ui.SplashActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
