--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,10 +9,14 @@
         <attr name="metaButtonBarButtonStyle" format="reference" />
     </declare-styleable>
     <declare-styleable name="ds">
+        <attr name="colorPrimary" format="color" />
         <attr name="backgroundcolor" format="color" />
         <attr name="cardbackground" format="color" />
         <attr name="textcolor" format="color" />
         <attr name="tintcolor" format="color" />
         <attr name="buttoncolor" format="color" />
+        <attr name="startcolor" format="color" />
+        <attr name="endcolor" format="color" />
+
     </declare-styleable>
 </resources>
