--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Light/Day Mode theme. -->
+    <color name="backgroundcolor">#3a469e</color>
+    <color name="cardbackground">#ffffff</color>
+    <color name="textcolor">#808080</color>
+    <color name="tintcolor">#000000</color>
+    <color name="buttoncolor">#283593</color>
+    <color name="starcolor">#283593</color>
+    <color name="endcolor">#001055</color>
+
+    <!-- Night Mode theme. -->
+    <color name="backgroundcolor_o">#161616</color>
+    <color name="cardbackground_o">#424242</color>
+    <color name="textcolor_o">#ffffff</color>
+    <color name="tintcolor_o">#ffffff</color>
+    <color name="buttoncolor_o">#283593</color>
+    <color name="starcolor_o">#1b1b1b</color>
+    <color name="endcolor_o">#000000</color>
+
     <color name="colorPrimary">#283593</color>
     <color name="colorPrimaryDark">#001055</color>
     <color name="colorPrimaryLigth">#5f5fc4</color>
     <color name="colorAccent">#ff5722</color>
+
     <color name="colorSeconaryDark">#c41c00</color>
     <color name="colorSeconarylight">#ff8a50</color>
     <color name="colorTerciarioDark">#c43e00</color>
@@ -16,22 +36,6 @@
     <color name="colorSombra">#909096</color>
     <color name="colorBlack">#000000</color>
     <color name="nav_submenubackground">#a0cee5fa</color>
-
-    <!-- Light/Day Mode theme. -->
-    <color name="backgroundcolor">#3a469e</color>
-    <color name="cardbackground">#ffffff</color>
-    <color name="textcolor">#808080</color>
-    <color name="tintcolor">#000000</color>
-    <color name="buttoncolor">#283593</color>
-
-    <!-- Night Mode theme. -->
-    <color name="backgroundcolor_o">#161616</color>
-    <color name="cardbackground_o">#424242</color>
-    <color name="textcolor_o">#ffffff</color>
-    <color name="tintcolor_o">#ffffff</color>
-    <color name="buttoncolor_o">#283593</color>
-
-
 
 
 </resources>
