--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
     android:layout_height="match_parent"
-    tools:context=".ui.SignUpActivity">
-
+    android:animateLayoutChanges="true"
+    tools:context=".ui.SignUp2Activity">
+    <!--- android:animateLayoutChanges="true" activar las animaciones -->
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -40,8 +42,8 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="14dp"
                         android:scaleType="fitCenter"
-
-                        android:src="@drawable/ic_adminnegsolo" />
+                        android:src="@drawable/ic_adminnegsolo"
+                        />
 
                     <TextView
                         android:id="@+id/tvTitulo"
@@ -49,9 +51,10 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imgLogo"
                         android:layout_centerHorizontal="true"
-                        android:text="@string/sign_up1"
-                        android:textColor="@color/textcolor"
-                        android:textSize="18sp" />
+                        android:text="@string/sign_up2"
+                        android:textColor="?attr/textcolor"
+                        android:textSize="18sp"
+                         />
                 </LinearLayout>
 
                 <android.support.v7.widget.CardView
@@ -73,26 +76,26 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/name" />
+                            android:text="@string/email" />
 
                         <EditText
-                            android:id="@+id/etName"
+                            android:id="@+id/etEmail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableRight="@drawable/ic_ico_person"
-                            android:hint="@string/name" />
+                            android:drawableRight="@drawable/ic_ico_email"
+                            android:hint="@string/email" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/pais" />
+                            android:text="@string/password" />
 
                         <EditText
-                            android:id="@+id/etPais"
+                            android:id="@+id/etPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-
-                            android:hint="@string/pais" />
+                            android:drawableRight="@drawable/ic_ico_lock"
+                            android:hint="@string/password" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
