--- a/app/src/main/res/drawable/gradient_bt_flat.xml
+++ b/app/src/main/res/drawable/gradient_bt_flat.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+
     <gradient
         android:angle="90"
         android:endColor="?attr/endcolor"
-        android:startColor="?attr/startcolor"
+        android:startColor="?attr/buttoncolor"
         android:type="linear">
     </gradient>
+
     <corners
-        android:radius="0dp"/>
+        android:radius="5dp"/>
 
 </shape>
