--- a/app/src/main/res/drawable/ic_logo.xml
+++ b/app/src/main/res/drawable/ic_logo.xml
@@ -1,5 +1,39 @@
-<vector android:height="24dp" android:tint="#FF6D29"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M10,20h4L14,4h-4v16zM4,20h4v-8L4,12v8zM16,9v11h4L20,9h-4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="478dp"
+    android:height="478dp"
+    android:viewportWidth="478"
+    android:viewportHeight="478">
+  <path
+      android:pathData="M367.3,26l90.2,46.8H277.1L367.3,26z"
+      android:fillColor="#FF3D00"/>
+  <path
+      android:pathData="M166.6,245c-6.2,0 -12.4,-0.2 -18.5,-0.7c-6,-0.4 -12.2,-1.1 -18.2,-1.9c-6,-0.8 -11.9,-1.9 -17.8,-3.2c-5.8,-1.2 -11.7,-2.8 -17.4,-4.4c-5.7,-1.7 -11.4,-3.5 -17,-5.6c-5.6,-2 -11.1,-4.3 -16.6,-6.7c-5.4,-2.4 -10.8,-5 -16.1,-7.8c-0.3,-0.1 -0.6,-0.3 -1,-0.5v-0.4c2.5,1.2 5,2.3 7.5,3.3c3.8,1.6 7.7,3.1 11.6,4.4c3.9,1.3 7.9,2.6 11.8,3.7c4,1.1 8.1,2.1 12.1,2.9c4.1,0.8 8.2,1.5 12.4,2.1c4.2,0.6 8.4,1 12.6,1.3c4.2,0.3 8.5,0.4 12.8,0.4c3.7,0 7.4,-0.1 11,-0.3c3.6,-0.2 7.3,-0.5 10.9,-1c3.6,-0.4 7.2,-1 10.7,-1.6c3.5,-0.6 7.1,-1.3 10.5,-2.2c3.5,-0.8 6.9,-1.7 10.3,-2.8c3.4,-1 6.8,-2.1 10.1,-3.3c6.6,-2.4 13.3,-5.2 19.6,-8.3c6.3,-3.1 12.6,-6.6 18.7,-10.4c6,-3.8 11.9,-7.9 17.6,-12.4c5.7,-4.4 11.2,-9.2 16.4,-14.2c5.3,-5 10.3,-10.4 15.2,-15.9c4.8,-5.6 9.4,-11.5 13.8,-17.5c4.4,-6.1 8.5,-12.5 12.3,-19c3.8,-6.6 7.4,-13.4 10.7,-20.3c3.3,-7 6.3,-14.2 9,-21.6c1,-2.7 2,-5.6 2.9,-8.4h95.1c-0.8,1.8 -1.7,3.7 -2.6,5.5c-4.4,9 -9.2,17.8 -14.3,26.3c-2.6,4.2 -5.2,8.4 -7.9,12.5c-2.7,4.1 -5.6,8.1 -8.5,12c-2.9,3.9 -5.9,7.8 -9,11.6c-3.1,3.7 -6.2,7.5 -9.4,11.1c-3.2,3.6 -6.5,7.1 -9.9,10.5c-3.4,3.4 -6.8,6.8 -10.3,10c-3.5,3.2 -7.1,6.4 -10.8,9.4c-3.6,3.1 -7.4,6 -11.2,8.9c-3.8,2.8 -7.7,5.6 -11.6,8.3c-3.9,2.6 -7.9,5.2 -11.9,7.7c-4,2.4 -8.2,4.8 -12.3,7c-4.2,2.2 -8.4,4.4 -12.6,6.4c-4.2,2 -8.6,3.9 -12.9,5.7c-4.4,1.8 -8.8,3.5 -13.3,5c-4.4,1.5 -9,3 -13.5,4.3c-4.5,1.3 -9.2,2.5 -13.8,3.5c-4.6,1 -9.4,2 -14,2.8c-4.7,0.8 -9.5,1.5 -14.3,2c-4.8,0.6 -9.6,1 -14.5,1.2C176.4,244.9 171.5,245 166.6,245z"
+      android:fillColor="#FF3D00"/>
+  <path
+      android:pathData="M424,338.4h-62.5V172.8c13.4,-13.9 25.5,-29.3 35.9,-45.7c10.5,-16.4 19.4,-34 26.6,-52.2V338.4zM344.6,338.4h-62.5V230.7c22.4,-10.9 43.4,-24.9 62.5,-41.8V338.4zM265.3,338.4h-62.5v-83.6c21.4,-2.9 42.4,-8.5 62.5,-16.6V338.4zM186,338.4h-62.5v-84.9c7.1,1.2 14.4,2.1 21.5,2.7c7.3,0.6 14.8,0.9 22.2,0.9c6.2,0 12.6,-0.2 18.7,-0.7V338.4zM106.6,338.4H44.1V226.6C64,237.1 85,245 106.6,250.1V338.4z"
+      android:fillColor="#4980DE"/>
+  <path
+      android:pathData="M67.9,379.3H51.8v-3.8c0,-4.4 0.5,-7.7 1.5,-10.1c1,-2.4 3,-4.5 6.1,-6.3c3,-1.8 7,-2.7 11.8,-2.7c5.8,0 10.2,1 13.2,3.1c3,2.1 4.7,4.6 5.3,7.6c0.6,3 0.9,9.2 0.9,18.5v28.4H73.8v-5c-1.1,2 -2.4,3.5 -4.1,4.5s-3.6,1.5 -5.9,1.5c-3,0 -5.8,-0.8 -8.3,-2.5c-2.5,-1.7 -3.8,-5.4 -3.8,-11.1v-4.6c0,-4.2 0.7,-7.1 2,-8.6c1.3,-1.5 4.6,-3.3 9.9,-5.4c5.6,-2.2 8.7,-3.7 9.1,-4.5c0.4,-0.8 0.6,-2.3 0.6,-4.7c0,-3 -0.2,-4.9 -0.7,-5.8c-0.4,-0.9 -1.2,-1.3 -2.2,-1.3c-1.2,0 -1.9,0.4 -2.2,1.1c-0.3,0.8 -0.4,2.7 -0.4,5.9V379.3zM73.3,387.1c-2.8,2 -4.3,3.7 -4.8,5.1c-0.4,1.4 -0.7,3.3 -0.7,5.9c0,2.9 0.2,4.8 0.6,5.7c0.4,0.9 1.1,1.3 2.3,1.3c1.1,0 1.8,-0.3 2.1,-1c0.3,-0.7 0.5,-2.4 0.5,-5.3V387.1z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M135.6,345v68.9h-17.2v-4.1c-1.6,1.7 -3.4,3 -5.2,3.8c-1.8,0.9 -3.7,1.3 -5.7,1.3c-2.7,0 -5,-0.7 -6.9,-2.1c-2,-1.4 -3.2,-3 -3.8,-4.9c-0.6,-1.8 -0.8,-4.9 -0.8,-9v-26.4c0,-4.3 0.3,-7.4 0.8,-9.2c0.6,-1.8 1.8,-3.4 3.8,-4.8c2,-1.4 4.4,-2.1 7.1,-2.1c2.1,0 4.1,0.4 5.9,1.2c1.8,0.8 3.4,1.9 4.8,3.5v-16H135.6zM118.4,371.7c0,-2.1 -0.2,-3.5 -0.5,-4.2c-0.4,-0.7 -1.1,-1.1 -2.1,-1.1c-1,0 -1.7,0.3 -2.1,1c-0.4,0.6 -0.5,2.1 -0.5,4.3v27.7c0,2.3 0.2,3.8 0.5,4.5c0.3,0.7 1,1.1 2,1.1c1.1,0 1.8,-0.4 2.2,-1.2c0.4,-0.8 0.6,-2.8 0.6,-5.9V371.7z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M158.7,357.4l-0.3,5.4c1.3,-2.1 2.9,-3.7 4.8,-4.8c1.8,-1.1 3.9,-1.6 6.3,-1.6c4.6,0 8.2,2.1 10.9,6.4c1.4,-2.1 3.1,-3.7 4.9,-4.8c1.8,-1.1 3.8,-1.6 6,-1.6c2.9,0 5.3,0.7 7.3,2.1c1.9,1.4 3.1,3.2 3.7,5.2c0.5,2.1 0.8,5.4 0.8,10v40.1h-16.7v-36.8c0,-4.8 -0.2,-7.8 -0.5,-9c-0.3,-1.1 -1.1,-1.7 -2.3,-1.7c-1.2,0 -2,0.6 -2.4,1.7c-0.4,1.1 -0.5,4.1 -0.5,9v36.8H164V378c0,-5.5 -0.1,-8.9 -0.4,-10c-0.3,-1.1 -1,-1.7 -2.2,-1.7c-0.8,0 -1.4,0.3 -2,0.9c-0.5,0.6 -0.8,1.3 -0.9,2.1c-0.1,0.8 -0.1,2.6 -0.1,5.3v39.2h-16.7v-56.5H158.7z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M226.7,345v9H209v-9H226.7zM226.7,357.4v56.5H209v-56.5H226.7z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M250.4,357.4l-0.3,5.2c1.2,-2.1 2.8,-3.6 4.6,-4.7c1.8,-1 3.9,-1.6 6.2,-1.6c3,0 5.4,0.7 7.2,2.1c1.9,1.4 3.1,3.1 3.6,5.3c0.5,2.1 0.8,5.6 0.8,10.6v39.6h-17.2v-39.1c0,-3.9 -0.1,-6.3 -0.4,-7.1c-0.3,-0.9 -1,-1.3 -2.1,-1.3c-1.2,0 -2,0.5 -2.3,1.5c-0.3,1 -0.5,3.6 -0.5,7.9v38.2h-17.2v-56.5H250.4z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M311.3,357.4l-0.3,5.2c1.2,-2.1 2.8,-3.6 4.6,-4.7c1.8,-1 3.9,-1.6 6.2,-1.6c3,0 5.4,0.7 7.2,2.1c1.9,1.4 3.1,3.1 3.6,5.3c0.5,2.1 0.8,5.6 0.8,10.6v39.6h-17.2v-39.1c0,-3.9 -0.1,-6.3 -0.4,-7.1c-0.3,-0.9 -1,-1.3 -2.1,-1.3c-1.2,0 -2,0.5 -2.3,1.5c-0.3,1 -0.5,3.6 -0.5,7.9v38.2h-17.2v-56.5H311.3z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M378.4,386.7h-22.3v12.2c0,2.6 0.2,4.2 0.6,4.9c0.4,0.7 1.1,1.1 2.1,1.1c1.3,0 2.2,-0.5 2.6,-1.5c0.4,-1 0.7,-2.9 0.7,-5.7v-7.5h16.3v4.2c0,3.5 -0.2,6.2 -0.7,8c-0.4,1.9 -1.5,3.9 -3.1,6c-1.6,2.1 -3.7,3.7 -6.2,4.8c-2.5,1.1 -5.6,1.6 -9.3,1.6c-3.6,0 -6.8,-0.5 -9.6,-1.6c-2.8,-1 -4.9,-2.5 -6.5,-4.3c-1.5,-1.8 -2.6,-3.8 -3.2,-6c-0.6,-2.2 -0.9,-5.4 -0.9,-9.6v-16.5c0,-4.9 0.7,-8.8 2,-11.7c1.3,-2.9 3.5,-5 6.6,-6.6c3,-1.5 6.5,-2.3 10.5,-2.3c4.8,0 8.8,0.9 11.9,2.7c3.1,1.8 5.3,4.3 6.6,7.3c1.3,3 1.9,7.3 1.9,12.8V386.7zM361.1,377.5v-4.1c0,-2.9 -0.2,-4.8 -0.5,-5.7c-0.3,-0.9 -1,-1.3 -1.9,-1.3c-1.2,0 -1.9,0.4 -2.2,1.1c-0.3,0.7 -0.4,2.7 -0.4,5.9v4.1H361.1z"
+      android:fillColor="#EFEFEF"/>
+  <path
+      android:pathData="M423.1,357.4v43.5c0,5.9 -0.1,9.7 -0.4,11.4c-0.3,1.7 -1.2,3.5 -2.9,5.4c-1.6,1.9 -3.9,3.4 -6.9,4.4c-2.9,1 -6.6,1.5 -11.1,1.5c-5.5,0 -9.9,-0.9 -13.2,-2.8c-3.3,-1.9 -5,-5.5 -5.2,-11h16.7c0,2.5 0.9,3.7 2.7,3.7c1.3,0 2.2,-0.4 2.6,-1.2c0.4,-0.8 0.6,-2.4 0.6,-4.8v-4.3c-1.5,1.3 -3,2.3 -4.7,3c-1.6,0.7 -3.3,1 -5.1,1c-3.1,0 -5.6,-0.6 -7.6,-1.9c-2,-1.2 -3.4,-2.9 -4.1,-4.9c-0.7,-2 -1.1,-4.9 -1.1,-8.7v-20.5c0,-5.4 1,-9.2 2.9,-11.6c1.9,-2.4 4.9,-3.5 8.8,-3.5c2.2,0 4.1,0.4 5.9,1.3c1.8,0.9 3.4,2.2 4.7,4l1.2,-4.3H423.1zM405.8,372.4c0,-2.6 -0.1,-4.2 -0.4,-4.9c-0.3,-0.7 -1,-1.1 -2,-1.1c-1,0 -1.7,0.4 -2.1,1.2c-0.4,0.8 -0.6,2.4 -0.6,4.8v19c0,2.5 0.2,4.2 0.5,4.9c0.3,0.8 1,1.1 2,1.1c1.1,0 1.9,-0.5 2.2,-1.4c0.3,-0.9 0.5,-3 0.5,-6.2V372.4z"
+      android:fillColor="#EFEFEF"/>
 </vector>
