--- a/app/src/main/res/layout/activity_spash.xml
+++ b/app/src/main/res/layout/activity_spash.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
+    android:background="@drawable/gradient"
+
     tools:context=".ui.SplashActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -18,7 +19,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/dummy_content"
-        android:textColor="@color/colorTerciarioligh"
+        android:textColor="@color/colorAccent"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,12 +30,12 @@
         app:layout_constraintVertical_bias="0.49" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imgLogo"
         android:layout_width="69dp"
         android:layout_height="58dp"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/ic_admin_grap"
         app:layout_constraintBottom_toTopOf="@+id/fullscreen_content"
         app:layout_constraintEnd_toEndOf="@+id/fullscreen_content"
         app:layout_constraintStart_toStartOf="@+id/fullscreen_content" />
